--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -41,9 +41,17 @@
        {% block home %}
 
        {% endblock home%}
-       {% block article_list %}
-          
-       {% endblock article_list %}
+       
+        {% block articel_list %}
+        
+        {% endblock articel_list %}
+
+        {% block detail %}
+        
+        {% endblock detail %}
+
+
+ 
         </div>
         </section>
         <!-- Footer-->
