--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -7,7 +7,7 @@
             <div class="col-lg-6">
                 <center> 
                 <h2>بخش مقالات</h2>
-                <p class="lead">در ای قسمت شما میتوانید برخی از مهم ترین مقالات معرفی شده دنیای تکنولوژی را بخوانید</p>
+                <p class="lead">در این قسمت شما میتوانید برخی از مهم ترین مقالات معرفی شده دنیای تکنولوژی را بخوانید</p>
                 <a href="article_list" class="link-secondary">رفتن به این بخش</a>
                 </center> 
             </div>
