--- a/website/templates/account/login.html
+++ b/website/templates/account/login.html
@@ -33,7 +33,7 @@
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('images/bg-01.jpg');">
 			<div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
-				<form class="login100-form validate-form flex-sb flex-w" methood="post">
+				<form class="login100-form validate-form flex-sb flex-w" method="POST">
 					{% csrf_token %}
 					<span class="login100-form-title p-b-53">
 						Sign In With
@@ -69,7 +69,7 @@
 						</a>
 					</div>
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="Password" >
+						<input class="input100" type="password" name="password" >
 						<span class="focus-input100"></span>
 					</div>
 
