--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -23,6 +23,17 @@
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'blog:home' %}">خانه</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'blog:abute_me' %}">درباره من</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'blog:call' %}">تماس با من</a></li>
+                        {% if request.user.is_authenticated %}
+                             
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'blog:home' %}">{{request.user.firstname}}</a></li>
+                        
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'account:login_user' %}">خروج کاربر</a></li>
+                        {% else %}
+                        
+                        
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'account:login_user' %}">ورود</a></li>
+                        
+                        {% endif %}
                     </ul>
                 </div>
             </div>
