--- a/website/templates/account/register.html
+++ b/website/templates/account/register.html
@@ -71,12 +71,23 @@
 						<span class="focus-input100"></span>
 					</div>
 
+					<div class="p-t-31 p-b-9">
+						<span class="txt1">
+							required password
+						</span>
+					</div>
+
                     <div class="wrap-input100 validate-input" data-validate = "Username is required">
 						<input class="input100" type="text" name="password2" >
 						<span class="focus-input100"></span>
 					</div>
-
-                    <div class="wrap-input100 validate-input" data-validate = "Username is required">
+                    
+					<div class="p-t-31 p-b-9">
+						<span class="txt1">
+							email
+						</span>
+					</div>
+                    <div class="wrap-input100 validate-input" data-validate = "pless email">
 						<input class="input100" type="email" name="email" >
 						<span class="focus-input100"></span>
 					</div>
@@ -88,15 +99,6 @@
 						</button>
 					</div>
 
-					<div class="w-full text-center p-t-55">
-						<span class="txt2">
-							Not a member?
-						</span>
-
-						<a href="#" class="txt2 bo1">
-							Sign up now
-						</a>
-					</div>
 				</form>
 			</div>
 		</div>
